--- a/index.html
+++ b/index.html
@@ -4,7 +4,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HTML/CSS Lab2</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>chirpus inc.</h1>
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <li>Work</li>
+          <li>About us</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+      <div class="hire">
+        <h3>Hire Us</h3>
+      </div>
+    </header>
+    <main>
+      <h2>chirpus inc.</h2>
+      <div class="paragraph">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. In doloribus
+          debitis et totam facere at consectetur temporibus sit dolore repellat
+          quaerat fugit ex, cumque tenetur, perferendis voluptatum, ea illo
+          sint.
+        </p>
+      </div>
+      <h3>Call To Acton</h3>
+    </main>
+    <footer>
+      <div class="footer">
+        <p class="chirpus">chirpus inc.</p>
+        <p>Link 1</p>
+        <p>Link 2</p>
+        <p>Link 3</p>
+      </div>
+    </footer>
+  </body>
 </html>
